--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,11 @@
     <string name="enter_name">Enter Summoner\'s Name</string>
 
     *Setting Menu
-    <string name="change_region">Change Region</string>
     <string name="main_setting">Settings</string>
     <string name="nav_home">Home</string>
     <string name="nav_search">Search</string>
     <string name="nav_saved_summoner">Favorites</string>
-    <string name="nav_change_region">Change Region</string>
+    <string name="nav_setting">Setting</string>
 
     <string name="navigation_drawer_open">Open drawer</string>
     <string name="navigation_drawer_close">Close drawer</string>
